Card #40 ~ New counselling ic no and matrix no not displayed

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -135,7 +135,7 @@ en:
     document: Document Management
     file: File Registry
     stuinfo: Student Information
-    stuattendance: Student Atttendance
+    stuattendance: Student Attendance
     dicipline: Student Discipline
     counselling: Student Counselling
     examdev: Examination Question Bank
