Fixed house phone no is not displayed + display phone sample format(staffs & students)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -161,6 +161,7 @@ en:
     name: Name
     create: Create New Staff
     position: Position  #move to position when ready
+    title: Title
 
     personal_details: Personal Details
     code: Staff Code
