--- a/config/locales/ms_MY.yml
+++ b/config/locales/ms_MY.yml
@@ -161,6 +161,7 @@ ms_MY:
     name: Nama
     create: Cipta Kakitangan Baru
     position: Jawatan  #move to position when ready
+    title: Gelaran
 
     personal_details: Butir Peribadi
     code: Kod Kakitangan
