Additional fixes-menu items & INDEX page for Lecturer Appraisal

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -159,6 +159,7 @@ en:
     transaction: Library Transactions
     resources: Library Catalog 
     filling: E-Filling
+    averagelecturer: Data Analysis and Average Score of Lecturers
     
   staff: 
     new: New Staff
